k8s/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: discourse
  namespace: discourse
spec:
  podSelector:
    matchLabels:
      app: discourse
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: ingress-nginx
    - ports:
        - protocol: TCP
          port: 3000
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: discourse-postgresql
    - to:
        - podSelector:
            matchLabels:
              app: discourse-redis
